Added test memory parameters
Prevents some random build failure. Loading Hibernate twenty times is
heavy!