@@ -91,6 +91,15 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=500m</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
